--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react-dom": "^17.0.1"
 	},
 	"devDependencies": {
+		"@types/chrome": "^0.0.133",
 		"@types/react": "^17.0.3",
 		"@types/react-dom": "^17.0.2",
 		"clean-webpack-plugin": "^3.0.0",
