tried to fix typeError

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
 	},
 	"homepage": "https://github.com/bryanmoon1991/mini-ticker-extension#readme",
 	"dependencies": {
+		"@types/node": "^14.14.33",
+		"buffer": "^5.7.1",
+		"process": "^0.11.10",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"stocksocket": "^1.1.2"
@@ -26,12 +29,22 @@
 		"@types/chrome": "^0.0.133",
 		"@types/react": "^17.0.3",
 		"@types/react-dom": "^17.0.2",
+		"assert": "^2.0.0",
+		"browserify-zlib": "^0.2.0",
 		"clean-webpack-plugin": "^3.0.0",
+		"constants-browserify": "^1.0.0",
 		"copy-webpack-plugin": "^8.0.0",
 		"csstype": "^3.0.7",
 		"html-webpack-plugin": "^5.3.1",
+		"https-browserify": "^1.0.0",
+		"os-browserify": "^0.3.0",
+		"path-browserify": "^1.0.1",
+		"readline": "^1.3.0",
+		"stream-browserify": "^3.0.0",
+		"stream-http": "^3.1.1",
 		"ts-loader": "^8.0.17",
 		"typescript": "^4.2.3",
+		"url": "^0.11.0",
 		"webpack": "^5.24.4",
 		"webpack-cli": "^4.5.0"
 	}
